--- a/.github/workflows/sample-workflow-path.yml
+++ b/.github/workflows/sample-workflow-path.yml
@@ -36,39 +36,14 @@ jobs:
             fi
           done
 
-      - id: validation1
-        uses: microsoft/template-validation-action@main
-        with:
-          workingDirectory: ${{ runner.temp }}/template
-        env:
-          REPOSITORY_NAME: Azure-Samples/azd-ai-starter
-
-      - name: print result
-        run: cat ${{ steps.validation1.outputs.resultFile }}
-
-      - id: validation2
+      - id: validation
         uses: microsoft/template-validation-action@main
         with:
           workingDirectory: ${{ runner.temp }}/template
           validateAzd: false
-          validatePaths: "README.md, .devcontainer, azure.yaml, NON_EXISTENT_FILE"
-          expectedTopics: "ai-azd-templates, azd-templates"
-        env:
-          REPOSITORY_NAME: Azure-Samples/azd-ai-starter
-          README_H2_TAGS: "## Features, ## Get Started"
+          useDevContainer: false
+          securityAction: 'PSRule'
+          topics: ''
 
       - name: print result
-        run: cat ${{ steps.validation2.outputs.resultFile }}
-
-      - id: validation3
-        uses: microsoft/template-validation-action@main
-        with:
-          workingDirectory: ${{ runner.temp }}/template
-          validatePaths: "None"
-          expectedTopics: "None"
-          useDevContainer: true
-        env:
-          REPOSITORY_NAME: Azure-Samples/azd-ai-starter
-
-      - name: print result
-        run: cat ${{ steps.validation3.outputs.resultFile }}
+        run: cat ${{ steps.validation.outputs.resultFile }}
