--- a/action.yml
+++ b/action.yml
@@ -60,10 +60,16 @@ runs:
       run: |
         working_directory="${{ inputs.workingDirectory }}"
         relative_working_directory=$(realpath --relative-to="${{ github.workspace }}" "$working_directory")
-        source_path="${{ github.action_path }}/.ps-rule/"
-        relative_source_path=$(realpath --relative-to="$relative_working_directory" "$source_path")
-        echo "relative_source_path=$relative_source_path" >> $GITHUB_ENV
         echo "relative_working_directory=$relative_working_directory" >> $GITHUB_ENV
+
+    - name: Prepare PSRule for Azure
+      working-directory: ${{ github.action_path }}
+      id: prepare_psrule
+        cp -r .ps-rule "${{ inputs.working_directory }}/.ps-rule"
+        cp ps-rule.yaml "${{ $working_directory }}/ps-rule.yaml"
+        unique_name="generate_bicep_test_$(date +%s).py"
+        cp scripts/generate-bicep-test.py "${{ inputs.working_directory }}/$unique_name"
+        python3 "${{ inputs.working_directory }}/$unique_name"
       shell: bash
 
     # Analyze templates for MI compliance with PSRule for Azure
