--- a/action.yml
+++ b/action.yml
@@ -61,10 +61,12 @@ runs:
         working_directory="${{ inputs.workingDirectory }}"
         relative_working_directory=$(realpath --relative-to="${{ github.workspace }}" "$working_directory")
         echo "relative_working_directory=$relative_working_directory" >> $GITHUB_ENV
+      shell: bash
 
     - name: Prepare PSRule for Azure
-      working-directory: ${{ github.action_path }}
       id: prepare_psrule
+      working-directory: ${{ github.action_path }}
+      run: |
         cp -r .ps-rule "${{ inputs.working_directory }}/.ps-rule"
         cp ps-rule.yaml "${{ $working_directory }}/ps-rule.yaml"
         unique_name="generate_bicep_test_$(date +%s).py"
