--- a/action.yml
+++ b/action.yml
@@ -67,11 +67,11 @@ runs:
       id: prepare_psrule
       working-directory: ${{ github.action_path }}
       run: |
-        cp -r .ps-rule "${{ inputs.working_directory }}/.ps-rule"
-        cp ps-rule.yaml "${{ $working_directory }}/ps-rule.yaml"
+        cp -r .ps-rule "${{ inputs.workingDirectory }}/.ps-rule"
+        cp ps-rule.yaml "${{ inputs.workingDirectory }}/ps-rule.yaml"
         unique_name="generate_bicep_test_$(date +%s).py"
-        cp scripts/generate-bicep-test.py "${{ inputs.working_directory }}/$unique_name"
-        python3 "${{ inputs.working_directory }}/$unique_name"
+        cp scripts/generate-bicep-test.py "${{ inputs.workingDirectory }}/$unique_name"
+        python3 "${{ inputs.workingDirectory }}/$unique_name"
       shell: bash
 
     # Analyze templates for MI compliance with PSRule for Azure
@@ -80,11 +80,9 @@ runs:
       if: ${{ inputs.securityAction == 'PSRule' }}
       id: run_psrule
       with:
-        source: ${{ env.relative_source_path }}
         path: ${{ env.relative_working_directory }}
         modules: 'PSRule.Rules.Azure'
         baseline: 'TemplateValidation.MI_2024_10'
-        inputPath: ${{ env.relative_working_directory }}/**/*.test.bicep
         outputFormat: "json"
         outputPath: 'ps-rule-output.json'
 
