--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,7 @@ runs:
     - name: Prepare PSRule for Azure
       id: prepare_psrule
       run: |
-        cp -r ${{ github.action_path }}/.ps-rule "${{ inputs.workingDirectory }}/.ps-rule"
+        cp ${{ github.action_path }}/.ps-rule/templateCustom.Rule.yaml "${{ inputs.workingDirectory }}/.ps-rule"
         cp ${{ github.action_path}}/ps-rule.yaml "${{ inputs.workingDirectory }}/ps-rule.yaml"
         cd ${{ inputs.workingDirectory }}
         python3 ${{ github.action_path }}/scripts/generate-bicep-test.py 
