--- a/action.yml
+++ b/action.yml
@@ -66,8 +66,9 @@ runs:
     - name: Prepare PSRule for Azure
       id: prepare_psrule
       run: |
-        cp ${{ github.action_path }}/.ps-rule/templateCustom.Rule.yaml "${{ inputs.workingDirectory }}/.ps-rule"
-        cp ${{ github.action_path}}/ps-rule.yaml "${{ inputs.workingDirectory }}/ps-rule.yaml"
+        rm -rf ${{ inputs.workingDirectory }}/.ps-rule/*
+        cp ${{ github.action_path }}/.ps-rule/templateCustom.Rule.yaml ${{ inputs.workingDirectory }}/.ps-rule
+        cp ${{ github.action_path}}/ps-rule.yaml ${{ inputs.workingDirectory }}
         cd ${{ inputs.workingDirectory }}
         python3 ${{ github.action_path }}/scripts/generate-bicep-test.py 
       shell: bash
